[project]
name = "aesop-arces"
description = "Exposure time calculator for APO/ARCES"
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "LICENSE", content-type = "text/plain" }
authors = [
  { name = "Brett Morris", email = "morrisbrettm@gmail.com" },
  { name = "Trevor Dorn-Wallenstein"},
]
dependencies = [
  "astropy",
  "numpy",
  "matplotlib",
  "h5py",
  "pytest-astropy",
  "specutils",
  "scipy",
  "astroquery"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest-doctestplus",
    'pytest >=4.6.0',
    'pytest-astropy',
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
    "sphinx-astropy[confv2]",
    "sphinx-rtd-theme",
    "matplotlib",
]

[project.urls]
repository = "https://github.com/bmorris3/aesop"

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aesop"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "aesop/version.py"

[tool.pytest.ini_options]
testpaths = [
  "aesop",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "aesop/conftest.py",
 "aesop/*setup_package*",
 "aesop/tests/*",
 "aesop/*/tests/*",
 "aesop/extern/*",
 "aesop/version*",
 "*/aesop/conftest.py",
 "*/aesop/*setup_package*",
 "*/aesop/tests/*",
 "*/aesop/*/tests/*",
 "*/aesop/extern/*",
 "*/aesop/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
